--- a/vignettes/WorkingwithOntologies.Rmd
+++ b/vignettes/WorkingwithOntologies.Rmd
@@ -17,23 +17,25 @@ library(gwasCatSearch)
 ```
 
 ## Using the ontologies
-The `efo_oi` data set provides access to information about the EFO ontology that has been organized along the lines of the ontologyIndex package from CRAN.
+The `efo_oi` data set provides access to information about the EFO ontology that has been organized along the lines of the ontologyIndex package from CRAN. In the code below we start with an ontology term print its name and then find the parents and children of that term.
 
 ```{r }
 efo_oi$name["EFO:0000095"]
 efo_oi$children["EFO:0000095"]
 efo_oi$parents["EFO:0000095"]
 ```
-One of the parents of `EFO:0000095` is `MONDO:0004095` and we can see how many children it has
+One of the parents of `EFO:0000095` is `EFO:0000220` and we can see how many children it has
 by using the `children` table in the ontology index.
 If we use the `[[` accessor then we just get the vector of children. If instead we use the `[` accessor then we would get a list that is named by the input vector of terms where each element is the vector of children for the corresponding EFO term.
 ```{r}
-x1 = efo_oi$children[["MONDO:0004095"]]
+x1 = efo_oi$children[["EFO:0000220"]]
 
 x1
 ```
+We see that "EFO:0000095" is one of the children of "EFO:0000220", as we expect given the fact that "EFO:0000220" is a parent of "EFO:0000095"
 
 Now we will interact with the DB to get at the mappings to different terms.
+In the code below we can find which of the children of "EFO:0000220" have studies that are directly mapped to them or that have inherited a mapping from. one of its children.
 
 ```{r dbmappings}
 
@@ -46,10 +48,33 @@ Now we will interact with the DB to get at the mappings to different terms.
 
 ```
 
-Now we can look at some plotting for the graph and manipulations of the EFO tables
+In the code chunk below we get the counts for the parents of "EFO:0000095".
+Suppose we are interested in this phenotype and interpreting the GWAS hits.
+One approach we could take to interpreting any GWAS hits for this phenotype is to download GWAS summary statistics for this phenotype (if it was computed) from the UKBB.
+We could then do either a Manhattan plot of those summary statistics in a local neighborhood, or we could do a compressed view that covered all chromosomes.
+
+We might also wonder if there are GWAS hits for related phenotypes that are in similar locations in the genome.  For example, since this phenotype is "chronic lymphocytic leukemia" we might ask if we look at all the hits mapped to the leukemia node in our ontology would they show any shared location.
+
+
+Our goal is to find a set of GWAS phenotypes that
+
+```{r parentmappings}
+query = paste0("SELECT * FROM efo_labels WHERE Subject IN ('",
+                paste(efo_oi$parents[["EFO:0000095"]], collapse = "','"),
+                "')")
+ pans = DBI::dbGetQuery(gwasCatSearch_dbconn(), query)
+ pans$Direct
+ pans$Inherited
+```
+
+Now we can look at some plotting for the graph and manipulations of the EFO tables.
+
 ```{r graphPlot}
-tags = c("EFO:0003884", "EFO:0004531", "EFO:0005208", "EFO:0009909", "EFO:0021409", "EFO:0021433")
+#tags = c("EFO:0003884", "EFO:0004531", "EFO:0005208", "EFO:0009909", "EFO:0021409", #"EFO:0021433")
 ##assign the next one to get back the graph structure that is plotted
+#get "EFO:0000095" and
+tags = c(x1, "EFO:0000095")
+##plotTags seems to cause some big download
 xt = plotTags(tags)
 nn = graph::nodes(xt)
 ##nodes have long names - suitable for printing we just want the CURIEs
